--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p class="lead">Eu sou André Gazoto</p>
+        <h1>Eu ensino Física e Programação</h1>
+        <p>Possui Licenciatura plena em Física pela Faculdade de Ciências (FC) da Universidade Estadual Paulista Júlio de Mesquita Filho - UNESP (2001) e Mestrado em Física pelo Instituto de Física Gleb Wataghin - IFGW da Universidade Estadual de Campinas - UNICAMP (2004). Atua como professor da rede pública do estado de São Paulo desde 2011, ministrando aulas de Física, Química e Matemática. Desde 2017, integra o Programa de Ensino Integral (PEI), desenvolvendo projetos interdisciplinares. Foi Bolsista Supervisor do PIBID (CAPES/UNESP) entre 2022 e 2024, orientando licenciandos em Física em escolas públicas. Tem interesse na História e Filosofia da Ciência, Astronomia, Astrofísica e divulgação científica, além de metodologias inovadoras para o ensino de ciências.</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Física</p>
+            <p class="badge bg-secondary">Astronomia</p>
         </div>
     </header>
     <main class="container mt-5">
